<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App -->
    <string name="app_name">Task Butler</string>

    <!-- Activity titles -->
    <string name="title_activity_main">Task Butler</string>
    <string name="title_activity_add_task">Create Task</string>
    <string name="title_activity_edit_task">Edit Task</string>
    <string name="title_activity_view_task">No Category</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_edit_categories">Categories</string>
    <string name="title_activity_custom_sort">Custom Sort</string>
    
    <!-- Toast notifications -->
    <string name="toast_task_completed">Task completed! Congratulations!</string>
    <string name="toast_task_repeated">This repeating task will be due again</string>
    <string name="toast_task_repeat_delayed">This repeating task will reappear</string>
    <string name="toast_task_deleted">Task deleted</string>
    <string name="toast_category_deleted">Category deleted</string>
    <string name="toast_task_no_name">Task needs a name!</string>
    <string name="toast_category_no_name">Category needs a name!</string>
    <string name="toast_category_exists">Category name already exists</string>
    <string name="toast_error_no_task">Error retrieving task</string>
    <string name="toast_no_tasks_deleted">No tasks were deleted</string>
    
    <!-- Menu items -->
    <string name="menu_save">Save</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_add_task">New</string>
    <string name="menu_edit_task">Edit</string>
    <string name="menu_delete_task">Delete</string>
    <string name="menu_delete_finished">Delete completed tasks</string>
    <string name="menu_delete_all">Delete all tasks</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_accept">Accept</string>
    <string name="menu_help">Help</string>
    <string name="menu_ok">OK</string>
    <string name="menu_source">Source</string>
    <string name="menu_next">Next</string>
    <string name="menu_backup">Backup</string>
    <string name="menu_restore">Restore</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_backup_restore">Backup/Restore</string>

    <!-- TextView items -->
    <string name="text_empty_list">No tasks found.</string>
    <string name="text_no_categories">No categories found.</string>
    <string name="text_task_name">NAME</string>
    <string name="text_task_priority">PRIORITY</string>
    <string name="text_task_category">CATEGORY</string>
    <string name="text_task_due">DUE DATE</string>
    <string name="text_task_notes">NOTES</string>
    <string name="text_priority_urgent">Urgent</string>
    <string name="text_priority_normal">Normal</string>
    <string name="text_priority_trivial">Trivial</string>
    <string name="text_main_all_categories">All Tasks</string>
    <string name="text_at">at</string>

    <!-- EditText items -->
    <string name="edit_task_name">Enter task name</string>
    <string name="edit_task_notes">Enter task details</string>
    <string name="edit_category_name">Enter category name</string>
    
    <!-- CheckBox items -->
    <string name="checkbox_auto_delete">Auto-delete completed tasks</string>
    <string name="checkbox_has_due_date">Due date</string>
    <string name="checkbox_has_final_due_date">Procrastination alarm</string>
    <string name="checkbox_has_repetition">Repeat every</string>
    <string name="checkbox_complete">Complete this task</string>
    
    <!-- ImageView items -->
    <string name="image_priority">Priority</string>
    <string name="image_category">Category</string>
    <string name="image_alarm">Procrastination Alarm</string>
    <string name="image_repeat">Repetition</string>
    <string name="image_up">Up</string>
    <string name="image_down">Down</string>
    
    <!-- Dialog items -->
    <string name="dialog_new_category_title">Set name</string>
    <string name="dialog_about_title">About Task Butler</string>
    <string name="dialog_about">Copyright 2012 Jonathan Hasenzahl, James Celona, Dhimitraq Jorgji.\n\nTask Butler is distributed under the GNU General Public License.</string>
	<string name="dialog_procrastinator_title">Procrastination alarm</string>
	<string name="dialog_procrastinator_help">Task Butler will remind you periodically about tasks that are past due. If a task is time-sensitive, use the Procrastination Alarm to be reminded more frequently.</string>
    <string name="dialog_sorting_title">Custom sorting</string>
    <string name="dialog_sorting_help">Tap on a sorting parameter to enable it. Tap the arrows of a parameter to change its rank in the list. Tasks will be sorted by the highest ranked parameter first, then by the second highest, and so on.</string>
    <string name="dialog_delete_single">Are you sure you want to delete this task?</string>
    <string name="dialog_delete_completed">Are you sure you want to delete all completed tasks? This cannot be undone. Repeating tasks will not be deleted.</string>
    <string name="dialog_delete_all">Are you sure you want to delete all tasks? This cannot be undone.</string>
    <string name="dialog_category_delete">Are you sure you want to delete this category?</string>
	<string name="dialog_restore_backup">Are you sure you want to restore your backup? Restoring will replace your existing tasks.</string>
    
    <!-- Preferences items -->
    <string name="pref_category_tasks">Task List</string>
    <string name="pref_category_reminders">Alarms</string>
    <string name="pref_category_backup">Backup &amp; Restore</string>
    <string name="pref_auto_sort">Auto sort</string>
    <string name="pref_custom_sort">Custom sort</string>
    <string name="pref_hide_completed">Hide completed tasks</string>
    <string name="pref_default_hour">Default due time of day</string>
    <string name="pref_default_hour_dialog">Set time</string>
    <string name="pref_vibrate">Vibrate on alarm</string>
    <string name="pref_reminder_time">Normal alarm</string>
    <string name="pref_alarm_time">Procrastination alarm</string>
    <string name="pref_alarm_dialog">Set alarm time</string>
    <string name="pref_backup">Backup to SD card</string>
    <string name="pref_restore">Restore from SD card</string>
    
    <!-- Preferences arrays -->
    <string-array name="pref_reminder_times">
        <item>1 hour</item>
        <item>2 hours</item>
        <item>4 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
    </string-array>
    
    <string-array name="pref_reminder_values">
        <item>1</item>
        <item>2</item>
        <item>4</item>
        <item>6</item>
        <item>12</item>
        <item>24</item>
    </string-array>
    
    <string-array name="pref_alarm_times">
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
    </string-array>
    
    <string-array name="pref_alarm_values">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
    </string-array>
    
    <string-array name="pref_default_hour">
        <item>Midnight</item>
        <item>6:00 am</item>
        <item>9:00 am</item>
        <item>Noon</item>
        <item>3:00 pm</item>
        <item>6:00 pm</item>
    </string-array>
    
    <string-array name="pref_default_hour_values">
        <item>0</item>
        <item>6</item>
        <item>9</item>
        <item>12</item>
        <item>15</item>
        <item>18</item>
    </string-array>
</resources>