<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical" >
    
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingLeft="4dp"
	    android:paddingRight="4dp" >
	
	    <!-- Text name -->
	    
	    <TextView
	        android:id="@+id/text_add_task_name"
	        android:layout_width="wrap_content"
	        android:layout_height="40dp"
	        android:layout_alignParentTop="true"
	        android:layout_margin="4dp"
	        android:text="@string/text_task_name"
	        android:textSize="16sp"
	        android:gravity="center_vertical" />
	
	    <EditText
	        android:id="@+id/edit_add_task_name"
	        android:layout_width="match_parent"
	        android:layout_height="40dp"
	        android:layout_alignParentTop="true"
	        android:layout_toRightOf="@id/text_add_task_name"
     	    android:layout_margin="4dp"
	        android:hint="@string/edit_task_name"
	        android:textSize="16sp"
	        android:inputType="textCapSentences|textAutoCorrect" />
	    
	    <!-- Notes -->	
	    
	    <TextView
	        android:id="@+id/text_add_task_notes"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/text_add_task_name"
	        android:layout_margin="4dp"
	        android:text="@string/text_task_notes"
	        android:textSize="16sp"
	        android:gravity="center_vertical" />   	    
	    
	    <EditText
	        android:id="@+id/edit_add_task_notes"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/text_add_task_notes"
	        android:layout_margin="4dp"
	        android:hint="@string/edit_task_notes"
	        android:inputType="textCapSentences|textMultiLine|textAutoCorrect"
	        android:gravity="center_vertical"
	        android:minHeight="40dp"
	        android:textSize="16sp" />
	    
	    <!-- Category -->
	    
	    <TextView
	        android:id="@+id/text_add_task_category"
	        android:layout_width="wrap_content"
	        android:layout_height="40dp"
	        android:layout_below="@id/edit_add_task_notes"
	        android:layout_margin="4dp"
	        android:text="@string/text_task_category"
	        android:textSize="16sp"
	        android:gravity="center_vertical" />
	    
	    <Spinner
	        android:id="@+id/spinner_add_task_category"
	        android:layout_width="match_parent"
	        android:layout_height="40dp"
	        android:layout_below="@id/edit_add_task_notes"
	        android:layout_toRightOf="@id/text_add_task_category"
	        android:layout_margin="4dp"
			android:textSize="16sp" />
	    
	    <!-- Priority -->
	    
	    <TextView
	        android:id="@+id/text_add_task_priority"
	        android:layout_width="wrap_content"
	        android:layout_height="40dp"
	        android:layout_below="@id/text_add_task_category"
	        android:layout_margin="4dp"
	        android:text="@string/text_task_priority"
	        android:textSize="16sp"
	        android:gravity="center_vertical" />
	
	    <Spinner
	        android:id="@+id/spinner_add_task_priority"
	        android:layout_width="match_parent"
	        android:layout_height="40dp"
	        android:layout_below="@id/text_add_task_category"
	        android:layout_toRightOf="@id/text_add_task_category"
	        android:layout_margin="4dp"
	        android:textSize="16sp"
	        android:orientation="horizontal" />
		
	    <!-- Due date -->	
	    
	    <TextView
	        android:id="@+id/text_add_task_due"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/text_add_task_priority"
	        android:layout_margin="4dp"
	        android:text="@string/text_task_due"
	        android:textSize="16sp"
	        android:gravity="center_vertical" />
   	    
   	    <CheckBox
	        android:id="@+id/checkbox_has_due_date"
	        android:layout_width="wrap_content"
	        android:layout_height="40dp"
	        android:layout_below="@id/text_add_task_due"
	        android:layout_alignParentLeft="true"
	        android:layout_margin="4dp"
	        android:text="@string/checkbox_has_due_date"
	        android:textSize="14sp"
	        android:checked="false" />
   	    
   	    <TextView 
   	        android:id="@+id/text_add_task_due_date"
   	        android:layout_width="85dp"
   	        android:layout_height="40dp"
   	        android:layout_below="@id/text_add_task_due"
   	        android:layout_toRightOf="@id/checkbox_has_due_date"
	        android:layout_margin="4dp"
	        android:padding="4dp"
	        android:background="@drawable/textview_borders"
	        android:textSize="16sp"
	        android:textColor="#ffffffff"
	        android:gravity="center"
	        android:clickable="true" />
   	    
   	    <TextView 
   	        android:id="@+id/text_at"
   	        android:layout_width="wrap_content"
   	        android:layout_height="40dp"
   	        android:layout_below="@id/text_add_task_due"
   	        android:layout_toRightOf="@id/text_add_task_due_date"
	        android:layout_marginTop="4dp"
	        android:layout_marginBottom="4dp"
	        android:padding="4dp"
	        android:textSize="14sp"
	        android:text="@string/text_at"
	        android:gravity="center_vertical" />
   	    
   	    <TextView 
   	        android:id="@+id/text_add_task_due_time"
   	        android:layout_width="85dp"
   	        android:layout_height="40dp"
   	        android:layout_below="@id/text_add_task_due"
   	        android:layout_toRightOf="@id/text_at"
	        android:layout_margin="4dp"
	        android:padding="4dp"
	        android:background="@drawable/textview_borders"
	        android:textSize="16sp"
	        android:textColor="#ffffffff"
	        android:gravity="center" />
   	    
   	    <CheckBox
	        android:id="@+id/checkbox_has_final_due_date"
	        android:layout_width="wrap_content"
	        android:layout_height="40dp"
	        android:layout_below="@id/checkbox_has_due_date"
	        android:layout_alignParentLeft="true"
	        android:layout_margin="4dp"
	        android:text="@string/checkbox_has_final_due_date"
	        android:textSize="14sp"
	        android:checked="false" />
   	    
 	    <CheckBox
	        android:id="@+id/checkbox_has_repetition"
	        android:layout_width="wrap_content"
	        android:layout_height="40dp"
	        android:layout_below="@id/checkbox_has_final_due_date"
	        android:layout_alignParentLeft="true"
	        android:layout_margin="4dp"
	        android:text="@string/checkbox_has_repetition"
	        android:textSize="14sp"
	        android:checked="false" />
   	    
 	    <EditText 
 	        android:id="@+id/edit_add_task_repeat_interval"
 	        android:layout_width="50dp"
   	        android:layout_height="40dp"
   	        android:layout_below="@id/checkbox_has_final_due_date"
	        android:layout_margin="4dp"
	        android:layout_toRightOf="@id/checkbox_has_repetition"
	        android:textSize="16sp"
	        android:gravity="center"
	        android:inputType="number"
	        android:maxLength="3" />
 	    
 	    <Spinner
	        android:id="@+id/spinner_add_task_repeat_type"
	        android:layout_width="match_parent"
	        android:layout_height="40dp"
	        android:layout_below="@id/checkbox_has_final_due_date"
	        android:layout_margin="4dp"
			android:layout_toRightOf="@id/edit_add_task_repeat_interval"
	        android:textSize="16sp"
	        android:gravity="center_vertical" />

	</RelativeLayout>

</ScrollView>